crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__fixed_lookahead_decisions_manifest.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: manifest
---
{
  "version": 3,
  "fixedLookahead": 2,
  "sharedDescent": false,
  "grammars": [
    {
      "name": "T",
      "summary": {
        "total": 2,
        "ll1": 1,
        "fixed": 1,
        "adaptive": 0
      },
      "decisions": [
        {
          "decision": 0,
          "rule": "s",
          "state": 7,
          "canDefer": false,
          "tier": "ll1"
        },
        {
          "decision": 1,
          "rule": "a",
          "state": 20,
          "canDefer": true,
          "tier": "fixed",
          "lookahead": 2
        }
      ]
    }
  ]
}
