crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__fixed_lookahead_thrift_like_table.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 21962
expression: table
---
FixedLookaheadTable {
    lookahead: 2,
    root: Probe(
        [
            (
                [
                    (
                        1,
                        1,
                    ),
                ],
                Probe(
                    [
                        (
                            [
                                (
                                    2,
                                    2,
                                ),
                            ],
                            Alt(
                                1,
                            ),
                        ),
                        (
                            [
                                (
                                    4,
                                    4,
                                ),
                            ],
                            Alt(
                                2,
                            ),
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        3,
                        3,
                    ),
                ],
                Alt(
                    3,
                ),
            ),
        ],
    ),
}
