crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__generated_lexer_lifecycle_facade.snap
---
source: crates/antlr-rust-codegen/src/generator/tests.rs
expression: "rendered_facade_declaration(&module, \"__antlr4_rust_lexer_facade\")"
---
antlr4_runtime::__antlr4_rust_lexer_facade! {
    type: SLexer<I, H>,
    fields: {
        base: base,
        hooks: hooks,
    },
    metadata: metadata,
    next_token(lexer, sink) {
        if H::ENABLES_LEXER_LIFECYCLE {
            antlr4_runtime::atn::lexer::next_token_compiled_with_semantic_dispatch(&mut lexer.base, sink, atn(), lexer_dfa(), &mut lexer.hooks, |_, _| false, |_, _| None, antlr4_runtime::UnknownSemanticPolicy::AssumeTrue, |_, _, _| {})
        } else {
            antlr4_runtime::atn::lexer::next_token_compiled(&mut lexer.base, sink, atn(), lexer_dfa())
        }
    }
}
