crates/antlr-rust-codegen/src/generator/snapshots/antlr_rust_codegen__generator__tests__generated_loop_filters_portable_local_predicate.snap
---
source: crates/antlr-rust-codegen/src/generator.rs
assertion_line: 20764
expression: rendered
---
let mut __loop_iter_1 = false;
loop {
    match self.base.sync_decision(atn(), 1, !__ctx.has_matched_child(), __loop_iter_1) {
        Ok(__sync_children) => {
            for __child in __sync_children { self.base.add_parse_child(&mut __ctx, __child); }
        }
        Err(__error) => {
            __sync_error = Some(__error.clone());
            return Err(__error);
        }
    }
    let __decision_start = antlr4_runtime::IntStream::index(self.base.input());
    let __prediction = {
        let __simulator = self.simulator.get_or_insert_with(|| antlr4_runtime::ParserAtnSimulator::new_shared(atn()));
        let __prediction_context = __simulator.intern_prediction_context(self.base.rule_context_version(), self.base.prediction_context_return_states(atn()));
        __simulator.set_exact_ambig_detection(self.base.prediction_mode() == antlr4_runtime::PredictionMode::LlExactAmbigDetection);
        __simulator.adaptive_predict_stream_info_with_context(0, 0, self.base.input(), __prediction_context)
            .map_err(|__error| match __error {
                antlr4_runtime::ParserAtnSimulatorError::NoViableAlt { index, .. } => self.base.no_viable_alternative_error_at(__decision_start, index),
                _ => self.base.no_viable_alternative_error(__decision_start),
            })?
    };
    let __prediction = if __prediction.alt == 1 {
        let __semantic_la = self.base.la(1);
        if __semantic_la == 3 && (__antlr_local_seen) {
            __prediction
        } else {
            antlr4_runtime::ParserAtnPrediction { alt: 2, ..__prediction }
        }
    } else {
        __prediction
    };
    self.base.record_generated_prediction_diagnostic(atn(), 1, &__prediction);
    match __prediction.alt {
        1 => {
            __loop_iter_1 = true;
            if !(__antlr_local_seen) {
                return Err(self.base.failed_predicate_error("semantic predicate"));
            }
            let __match = self.base.match_token_recovering(3, 4, atn())?;
            __consumed_eof |= __match.consumed_eof();
            for __child in __match.into_child_iter() { self.base.add_parse_child(&mut __ctx, __child); }
        }
        2 => {
            break;
        }
        _ => return Err(self.base.no_viable_alternative_error(__decision_start)),
    }
}
